--- a/angular/core/components/memberships_page/memberships_panel/memberships_panel.scss
+++ b/angular/core/components/memberships_page/memberships_panel/memberships_panel.scss
@@ -1,5 +1,8 @@
 .memberships-panel__membership {
   margin: 12px 0;
+  @media(max-width: $tiny-max-px) {
+    &:not(:last-child) { border-bottom: 1px solid $border-color; }
+  }
 }
 
 .memberships-panel__user {
